--- a/packages/splits-v2/package.json
+++ b/packages/splits-v2/package.json
@@ -22,6 +22,7 @@
     "prettier": "^3.1.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.1",
     "solc": "0.8.23-fixed",
     "solhint": "^4.0.0"
   }
