feat: reentrancy gaurd/basic test/sorted imports

--- a/packages/splits-v2/foundry.toml
+++ b/packages/splits-v2/foundry.toml
@@ -24,6 +24,7 @@ number_underscore = "thousands"
 quote_style = "double"
 tab_width = 4
 wrap_comments = true
+sort_imports = true
 
 [etherscan]
 mainnet = { key = "${API_KEY_ETHERSCAN}" }
