--- a/packages/splits-v2/package.json
+++ b/packages/splits-v2/package.json
@@ -8,7 +8,7 @@
     "lint": "pnpm lint:sol && prettier --check \"**/*.{json,md,yml}\"",
     "lint:sol": "forge fmt --check && pnpm solhint {script,src,test}/**/*.sol",
     "format": "prettier --write **/*.{json,md,yml} --ignore-path=.prettierignore",
-    "test": "forge test",
+    "test": "forge test -vvv",
     "test:coverage": "forge coverage",
     "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage"
   },
