--- a/packages/splits-v2/package.json
+++ b/packages/splits-v2/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf cache out",
     "lint": "pnpm lint:sol && prettier --check \"**/*.{json,md,yml}\"",
     "lint:sol": "forge fmt --check && pnpm solhint {script,src,test}/**/*.sol",
-    "format": "prettier --write **/*.{json,md,yml} --ignore-path=.prettierignore",
+    "format": "prettier --write \"**/*.{json,md,yml}\" --ignore-path=.prettierignore",
     "test": "forge test -vvv",
     "test:coverage": "forge coverage",
     "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage"
