--- a/packages/splits-v2/foundry.toml
+++ b/packages/splits-v2/foundry.toml
@@ -9,6 +9,8 @@ solc = "0.8.18"
 src = "src"
 test = "test"
 allow_paths = ['../../node_modules']
+fs_permissions = [{ access = "read-write", path = "./" }]
+
 
 [profile.default.fuzz]
 max_test_rejects = 1_000_000
@@ -62,9 +64,12 @@ targets = [
 "src/splitters/SplitWalletV2.sol" = ["SplitWalletV2"]
 "src/splitters/SplitFactoryV2.sol" = ["SplitFactoryV2"]
 
+
 [etherscan]
-mainnet = { key = "${API_KEY_ETHERSCAN}" }
+mainnet = { key = "${ETHERSCAN_API_KEY}" }
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
 
 [rpc_endpoints]
 localhost = "http://localhost:8545"
-mainnet = "https://eth-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+mainnet = "${MAINNET_RPC_URL}"
+sepolia = "${SEPOLIA_RPC_URL}"
