--- a/packages/splits-v2/package.json
+++ b/packages/splits-v2/package.json
@@ -10,7 +10,11 @@
     "format": "prettier --write \"**/*.{json,md,yml}\" --ignore-path=.prettierignore",
     "test": "forge test -vvv",
     "test:coverage": "forge coverage",
-    "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage"
+    "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage",
+    "deploy:SplitsWarehouse:test": "export DRY_RUN=true && source .env && forge script script/SplitsWarehouse.s.sol:SplitsWarehouseScript -vvvvv --rpc-url ",
+    "deploy:SplitsWarehouse": "export DRY_RUN=false && source .env && forge script script/SplitsWarehouse.s.sol:SplitsWarehouseScript --broadcast --verify -vvvvv --rpc-url ",
+    "deploy:SplitFactoryV2:test": "export DRY_RUN=true && source .env && forge script script/SplitFactoryV2.s.sol:SplitFactoryV2Script -vvvvv --rpc-url ",
+    "deploy:SplitFactoryV2": "export DRY_RUN=false && source .env && forge script script/SplitFactoryV2.s.sol:SplitFactoryV2Script --broadcast --verify -vvvvv --rpc-url "
   },
   "keywords": [],
   "author": "@splits",
