--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "prettier": "^3.1.0",
-    "turbo": "latest"
+    "turbo": "^1.12.2"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
