feat: add erc1271 support to split wallet

--- a/packages/splits-v2/foundry.toml
+++ b/packages/splits-v2/foundry.toml
@@ -1,6 +1,12 @@
 [profile.default]
 auto_detect_solc = false
-gas_reports = ["SplitsWarehouse", "SplitFactoryV2", "SplitWalletV2"]
+gas_reports = [
+    "SplitsWarehouse",
+    "PullSplitFactory",
+    "PushSplitFactory",
+    "PullSplit",
+    "PushSplit",
+]
 optimizer = true
 optimizer_runs = 5_000_000
 out = "out"
