--- a/packages/splits-v2/foundry.toml
+++ b/packages/splits-v2/foundry.toml
@@ -56,10 +56,17 @@ wrap_comments = true
 sort_imports = true
 
 [etherscan]
-mainnet = { key = "${ETHERSCAN_API_KEY}" }
-sepolia = { key = "${ETHERSCAN_API_KEY}" }
+mainnet = { key = "${ETHERSCAN_API_KEY}", chain = 1 }
+sepolia = { key = "${ETHERSCAN_API_KEY}", chain = 11155111 }
+holesky = { key = "${ETHERSCAN_API_KEY}", chain = 17000 }
+optimism_sepolia = { key = "${OPTIMISM_API_KEY}", chain = 11155420, url = 'https://api-sepolia-optimistic.etherscan.io/api' }
+base_sepolia = { key = "${BASE_API_KEY}", chain = 84532, url = 'https://api-sepolia.basescan.org/api' }
+polygon = { key = "${POLYGON_API_KEY}", chain = 137 }
+
 
 [rpc_endpoints]
 localhost = "http://localhost:8545"
 mainnet = "${MAINNET_RPC_URL}"
 sepolia = "${SEPOLIA_RPC_URL}"
+holesky = "${HOLESKY_RPC_URL}"
+optimism_sepolia = "${OP_SEPOLIA_RPC_URL}"
