--- a/packages/smart-vaults/package.json
+++ b/packages/smart-vaults/package.json
@@ -13,7 +13,9 @@
     "test": "forge test -vvv",
     "test:optimized": "pnpm run build:optimized && FOUNDRY_PROFILE=test-optimized forge test -vvv",
     "test:coverage": "forge coverage",
-    "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage"
+    "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage",
+    "deploy:VaultFactory:test": "export DRY_RUN=true && source .env && FOUNDRY_PROFILE=optimized forge script script/VaultFactory.s.sol:VaultFactoryScript --account SPLITS_DEPLOYER -vvvvv --rpc-url ",
+    "deploy:VaultFactory": "export DRY_RUN=false && source .env && FOUNDRY_PROFILE=optimized forge script script/VaultFactory.s.sol:VaultFactoryScript --account SPLITS_DEPLOYER --broadcast --verify -vvvvv --rpc-url "
   },
   "keywords": [],
   "author": "@splits",
