--- a/packages/splits-v2/.env.sample
+++ b/packages/splits-v2/.env.sample
@@ -1,6 +1,8 @@
-PRIVATE_KEY=
+DEPLOYER=
+# PRIVATE_KEY=
 
-MAINNET_RPC_URL=
-SEPOLIA_RPC_URL=
+# MAINNET_RPC_URL=
+# SEPOLIA_RPC_URL=
+TEMPO_TESTNET_RPC_URL= # should be https://username:password@rpc.testnet.tempo.xyz
 
-ETHERSCAN_API_KEY=
+# ETHERSCAN_API_KEY=
